Modificando el Index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Mi Primer GIT</title>
 </head>
 <body>
-    <h1>Mi Primer GIT</h1>
+    <h1>Página Principal</h1>
+    <h2>Programando... en Desarrollo</h2>
+    <ol>
+        <ul>Mijael 1</ul>
+        <ul>Mijael 2</ul>
+        <ul>Mijael 3</ul>
+    </ol>
 </body>
 </html>
