Mejorando el Index

--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
         <ul>Mijael 2</ul>
         <ul>Mijael 3</ul>
     </ol>
+    <h2>Programando... en Desarrollo 2</h2>
+    <ol>
+        <ul>Mijael 4</ul>
+        <ul>Mijael 5</ul>
+        <ul>Mijael 6</ul>
+    </ol>
 </body>
 </html>
